--- a/templates/layout/footer/_footer_back.html.twig
+++ b/templates/layout/footer/_footer_back.html.twig
@@ -6,7 +6,7 @@
                 <p>Espace réservé</p>
             </div>
             <div class="col-md-4">
-                <p>Le blog de Jean Dupont</p>
+                <p>Le blog de Joey Roux</p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-copyright" aria-hidden="true"></i> {{ 'now'|date("Y") }}
