--- a/templates/theme/theme_back.html.twig
+++ b/templates/theme/theme_back.html.twig
@@ -13,7 +13,7 @@
 
 
     {# début : mise en place du titre de l'onglet dynmaiquement #}
-    <title> médecine du monde - {% block title %}{% endblock %}</title>
+    <title> blog de joey - {% block title %}{% endblock %}</title>
     {# fin :  mise en place du titre de l'onglet dynmaiquement #}
 
 
