ajout media query

--- a/templates/layout/navbar/_navbar_front.html.twig
+++ b/templates/layout/navbar/_navbar_front.html.twig
@@ -3,7 +3,7 @@
     
     
     {# début : mise en place de la navbar #}
-    <nav class="navbar navbar-expand-lg bg-white shadow ">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-white shadow ">
         <div class="container-fluid">
           <a class="navbar-brand logohover" href="{{path('visitor.welcome.index')}}"> <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
             width="4rem" height="4rem" viewBox="0 0 834.000000 834.000000"
