--- a/templates/theme/theme_front.html.twig
+++ b/templates/theme/theme_front.html.twig
@@ -117,7 +117,7 @@ body {
 .txt > a {
 color:black;
 /* font-family: armata; */
-font-size: 6rem;
+font-size: 4.3rem;
 text-decoration: none; 
 }
 
@@ -403,6 +403,19 @@ text-decoration: none;
     transform: translateY(-20px)
   }
 }
+
+/* media query */
+
+@media screen and (max-width: 992px)
+{
+    .waviy span {
+  
+  font-size:2.5rem;}
+  .txt > a {
+font-size: 2.5rem;
+}
+}
+
 
 </style>
 
